# OpenRazerBattery

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
src/: battery.rs  cli.rs  device.rs  error.rs  hid.rs  lib.rs  main.rs  protocol.rs  tray.rs
tests/: device_tests.rs  protocol_tests.rs
