[package]
name = "razer-bat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A lightweight Windows tray utility for Razer wireless mouse battery status."
license = "GPL-3.0-only"
readme = "README.md"
publish = false

[dependencies]
hidapi = { version = "2.6.6", default-features = false, features = ["windows-native"] }
windows = { version = "0.62.2", default-features = false, features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
